# adnihilum

./: .gitignore  CMakeLists.txt  README.md  balloc.h  ctxalloc.h  debug_stuff.h  flalloc.h  linear_probing.h  log.c  log.h  server.c  storage.c  storage.h  types.h  version.h.in
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: adnihilum.xcf  b.html  client-receive.html  client-receive.js  client-receive_assembled.html  client-send.js  client-shared.js  client-simple.css  client-simple.html  client.css  client.html  client.js  client.min.js  client_assembled.html
tests/: lp_test.c
tools/: adnihilum_bench.go  assemble_html.py  build_and_run_tests.sh  build_android.sh  copy_readme_screenshots.sh  minify.sh  sync_remote.sh
